--- a/BLAZAM/_Imports.razor
+++ b/BLAZAM/_Imports.razor
@@ -47,6 +47,7 @@
 
 @using BLAZAM.Server.Data
 
+@using BLAZAM.Gui
 @using BLAZAM.Gui.UI;
 @using BLAZAM.Gui.UI.Dashboard.Widgets;
 @using BLAZAM.Gui.UI.Inputs
