--- a/BLAZAMGui/Layouts/AppFooter.razor
+++ b/BLAZAMGui/Layouts/AppFooter.razor
@@ -1,6 +1,6 @@
 @inherits AppComponentBase
 <MudElement Class="relative mud-width-full">
-    <MudToolBar Style="height:1.5em;bottom:0px;" Class="px-3 mud-width-full fixed">
+    <MudToolBar Style="height:1.5em;bottom:0px;" Class="px-3 mud-width-full">
             <Copyright />
             @if (AutoUpdateService.IsUpdatedScheduled)
             {
