--- a/BLAZAMGui/UI/Computers/ComputerSessions.razor
+++ b/BLAZAMGui/UI/Computers/ComputerSessions.razor
@@ -3,16 +3,16 @@
 @implements IDisposable
 @if (sessionsErrorMessage == null)
 {
-    <MudDataGrid Elevation=0 Items="sessions">
+    <MudDataGrid HorizontalScrollbar=true Elevation=0 Items="sessions">
         <Columns>
             <PropertyColumn Property="x=>x.User" />
             <PropertyColumn Property="x=>x.ConnectionState" />
             <PropertyColumn Property="x=>x.ClientIPAddress" />
             <TemplateColumn Title="Connected">
                 <CellTemplate>
-                    @if (context.Item.ConnectTime!=null)
+                    @if (context.Item.ConnectTime != null)
                     {
-                       <MudText>@context.Item.ConnectTime.Value.ToLocalTime()</MudText>
+                        <MudText>@context.Item.ConnectTime.Value.ToLocalTime()</MudText>
                     }
                 </CellTemplate>
             </TemplateColumn>
@@ -22,24 +22,25 @@
                     @if (context.Item.ConnectionState.ToString() == "Active")
                     {
                         <MudButton Color="Color.Info" OnClick=@(()=>{
-                            sessionToMessage=context.Item;
-                            sessionMessageModal?.Show();
+                           sessionToMessage=context.Item;
+                           sessionMessageModal?.Show();
                            })>Send Message</MudButton>
                     }
                 </CellTemplate>
             </TemplateColumn>
-                <TemplateColumn Tile="Manage">
-                    <CellTemplate>
+           
+            <TemplateColumn Title="Manage">
+                <CellTemplate>
                     @if (context.Item.ConnectionState.ToString() == "Active")
                     {
                         <MudButton Color="Color.Warning" OnClick=@(()=>{DisconnectSession(context.Item);})>Disconnect</MudButton>
                     }
                     <MudButton Color="Color.Error" OnClick=@(()=>{LogoffSession(context.Item);})>Logoff</MudButton>
-                    </CellTemplate>
-                </TemplateColumn>
+                </CellTemplate>
+            </TemplateColumn>
         </Columns>
     </MudDataGrid>
- 
+
     <AppModal @ref=@sessionMessageModal AllowClose=true Title="Send Message">
         <SendMessageModalContent Session="@sessionToMessage" />
     </AppModal>
@@ -102,7 +103,7 @@ else
 
         await InvokeAsync(StateHasChanged);
     }
-   
+
     async void DisconnectSession(IRemoteSession session)
     {
         if (await MessageService.Confirm("Are you sure you want to disconnect " + session.User.ToString(), "Disconnect User"))
