--- a/BLAZAMGui/UI/Settings/Permissions/DelegateListItem.razor
+++ b/BLAZAMGui/UI/Settings/Permissions/DelegateListItem.razor
@@ -3,9 +3,13 @@
     <TitleContent>
         <MudStack Row=true>
             <MudText Typo="Typo.h6">
-
+               @if(Group!=null){
                 @Group?.CanonicalName
-            </MudText>
+               }else {
+                    @("Group not found")
+
+                }
+                </MudText>
 
             <MudSwitch Label="Super User Group" Checked="Level?.IsSuperAdmin" Disabled />
         </MudStack>
