--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -14,17 +14,17 @@
     {
         <SetSubHeader @ref="SubHeader">
 
-                <DirectoryEntryViewHeader DirectoryEntry="@User"
-                                      OnAssignTo="@(()=>{AssignToModal?.Show();})"
-                                      OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
-                                      OnDelete="@DeleteUser"
-                                      OnDisable="@(async()=>{User.Enabled=false; await RefreshEntryComponents();})"
-                                      OnEnable="@(async()=>{User.Enabled=true; await RefreshEntryComponents();})"
-                                      OnMove="@(()=>{MoveToModal?.Show();})"
-                                      OnRename="@(()=>{RenameModal?.Show();})"
-                                      OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
-                                      OnToggleEditMode="ToggleEditMode"
-                                      OnUnlock="@Unlock" />
+            <DirectoryEntryViewHeader DirectoryEntry="@User"
+                                  OnAssignTo="@(()=>{AssignToModal?.Show();})"
+                                  OnChangeThumbnail="@(()=>{UploadThumbnailModal?.Show();})"
+                                  OnDelete="@DeleteUser"
+                                  OnDisable="@(async()=>{User.Enabled=false; await RefreshEntryComponents();})"
+                                  OnEnable="@(async()=>{User.Enabled=true; await RefreshEntryComponents();})"
+                                  OnMove="@(()=>{MoveToModal?.Show();})"
+                                  OnRename="@(()=>{RenameModal?.Show();})"
+                                  OnResetPassword="@(()=>{ChangePasswordModal?.Show();})"
+                                  OnToggleEditMode="ToggleEditMode"
+                                  OnUnlock="@Unlock" />
             <MudOverlay Visible="SavingChanges" DarkBackground="false" Absolute="true">
 
             </MudOverlay>
@@ -61,7 +61,7 @@
                     }
                 </AppModal>
 
-             
+
 
                 <MudGrid>
                     <MudItem xs="12" md="3">
@@ -159,15 +159,15 @@
 
                                 <MudStack Row Class="@_fieldMudStackClasses">
 
-                                  
+
                                     <DynamicMudInput T=string Label="@AppLocalization["First Name"]" @bind-Value="@User.GivenName" Disabled=!User.NewEntry />
-                                
+
                                     <DynamicMudInput T=string Label="@AppLocalization["Middle Name"]" @bind-Value="@User.MiddleName" Disabled=!User.NewEntry />
-                           
+
                                     <DynamicMudInput T=string Label="@AppLocalization["Last Name"]" @bind-Value="@User.Surname" Disabled=!User.NewEntry />
-                                
+
                                     <DynamicMudInput T=string Label="@AppLocalization["Display Name"]" @bind-Value="@User.DisplayName" Disabled=!User.NewEntry />
-                                
+
 
                                 </MudStack>
                                 @if (EditMode && !User.NewEntry)
@@ -180,69 +180,69 @@
 
 
 
-                                <Section Title="@AppLocalization["Account"]">
+                            <Section Title="@AppLocalization["Account"]">
 
-                                    <MudStack Row Class="@_fieldMudStackClasses">
+                                <MudStack Row Class="@_fieldMudStackClasses">
 
 
                                     @if (User.CanReadField(ActiveDirectoryFields.SAMAccountName))
-                                        {
+                                    {
 
 
-                                            <DynamicMudInput T=string Label="@AppLocalization["Username"]"
+                                        <DynamicMudInput T=string Label="@AppLocalization["Username"]"
                                                      @bind-Value="@User.SamAccountName"
                                                      Disabled=!User.NewEntry />
-                                            <MudButton StartIcon="@Icons.Material.Filled.ContentCopy" OnClick="@(()=>{CopyToClipboard(User.SamAccountName);})" />
+                                        <MudButton StartIcon="@Icons.Material.Filled.ContentCopy" OnClick="@(()=>{CopyToClipboard(User.SamAccountName);})" />
 
 
-                                        }
+                                    }
 
-                                        @if (User.NewEntry)
-                                        {
-                                            <DynamicMudInput T=string
+                                    @if (User.NewEntry)
+                                    {
+                                        <DynamicMudInput T=string
                                                      Label="@AppLocalization["Password"]"
                                                      @bind-Value="@Password"
                                                      InputType="InputType.Password" />
 
-                                            <DynamicMudInput T=string
+                                        <DynamicMudInput T=string
                                                      Label="@AppLocalization["Confirm Password"]"
                                                      @bind-Value="@ConfirmPassword"
                                                      InputType="InputType.Password" />
-                                        }
+                                    }
 
-                                        @if (User.CanReadField(ActiveDirectoryFields.Mail))
-                                        {
-                                            <DynamicMudInput T=string Label="@AppLocalization["Email Address"]"
+                                    @if (User.CanReadField(ActiveDirectoryFields.Mail))
+                                    {
+                                        <DynamicMudInput T=string Label="@AppLocalization["Email Address"]"
                                                      @bind-Value="@User.Email"
                                                      Disabled=!User.NewEntry />
 
-                                            <MudButton StartIcon="@Icons.Material.Filled.ContentCopy"
+                                        <MudButton StartIcon="@Icons.Material.Filled.ContentCopy"
                                                OnClick="@(()=>{CopyToClipboard(User.Email);})" />
 
-                                        }
-                                        @if (User.CanReadField(ActiveDirectoryFields.AccountExpires))
-                                        {
-                                            <DynamicMudInput T=DateTime?
-                                                                  Clearable
+                                    }
+                                    @if (User.CanReadField(ActiveDirectoryFields.AccountExpires))
+                                    {
+                                        <DynamicMudInput T=DateTime?
+                                                              Clearable
                                                      Label="@AppLocalization["Account Expiration"]"
                                                      @bind-Value="@User.ExpireTime"
                                                      Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.AccountExpires)) />
 
 
-                                        }
-                                    </MudStack>
-                                    @if (EditMode && !User.NewEntry)
-                                    {
-
-
-                                        <MudText>
-                                            To Modify the user's accounts click the Gear button and choose "Rename..."
-                                        </MudText>
-
                                     }
+                                </MudStack>
+                                @if (EditMode && !User.NewEntry)
+                                {
 
-                                </Section>
-                            
+
+                                    <MudText>
+                                        To Modify the user's accounts click the Gear button and choose "Rename..."
+                                    </MudText>
+
+                                }
+
+                            </Section>
+
 
 
                         </MudStack>
@@ -265,23 +265,23 @@
                         @if (User.CanReadField(ActiveDirectoryFields.Description))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Description"]" @bind-Value="@User.Description" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.Description)) />
-                                                            }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.EmployeeId))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Employee Id"]" @bind-Value="@User.EmployeeId" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.EmployeeId)) />
-                                                            }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.Department))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Department"]" @bind-Value="@User.Department" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.Department)) />
-      }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.Company))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Company"]" @bind-Value="@User.Company" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.Company)) />
-                                                            }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.Title))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Job Title"]" @bind-Value="@User.Title" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.Title)) />
-                                                            }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.PhysicalDeliveryOffice))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Office"]" @bind-Value="@User.PhysicalDeliveryOfficeName" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.PhysicalDeliveryOffice)) />
@@ -313,7 +313,7 @@
                             @if (User.CanReadField(ActiveDirectoryFields.POBox))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["PO Box"]" @bind-Value="@User.POBox" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.POBox)) />
-  }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.City))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["City"]" @bind-Value="@User.City" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.City)) />
@@ -346,25 +346,27 @@
                                 <DynamicMudInput T=string Label="@AppLocalization["Home Directory"]"
                                          @bind-Value="@User.HomeDirectory"
                                          Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.HomeDirectory)) />
-                                       
-                                         var homeDirectory = new SystemDirectory(User.HomeDirectory);
-                                         
-                                         <MudIcon Class="align-middle" Icon="@(homeDirectory.Exists?Icons.Material.Filled.Check:Icons.Material.Filled.Error)"
-                                         Color="@(homeDirectory.Exists?Color.Success:Color.Error)"/>
+                                @if (!User.HomeDirectory.IsNullOrEmpty())
+                                {
+                                    var homeDirectory = new SystemDirectory(User.HomeDirectory);
+                                    <MudIcon Class="align-middle" Icon="@(homeDirectory.Exists?Icons.Material.Filled.Check:Icons.Material.Filled.Error)"
+                                 Color="@(homeDirectory.Exists?Color.Success:Color.Error)" />
+                                }
+
                                 <MudButton StartIcon="@Icons.Material.Filled.ContentCopy" OnClick="@(()=>{CopyToClipboard(User.HomeDirectory);})" />
-                                                                }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.HomeDrive))
                             {
                                 <HomeDriveSelect Label="@AppLocalization["Home Drive"]" @bind-Value="@User.HomeDrive" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.HomeDrive)) />
-                                                            }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.ScriptPath))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Script Path"]" @bind-Value="@User.ScriptPath" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.ScriptPath)) />
-                                                            }
+                            }
                             @if (User.CanReadField(ActiveDirectoryFields.ProfilePath))
                             {
                                 <DynamicMudInput T=string Label="@AppLocalization["Profile Path"]" @bind-Value="@User.ProfilePath" Disabled=@(!EditMode || !User.CanEditField(ActiveDirectoryFields.ProfilePath)) />
-                                                            }
+                            }
                         </MudStack>
 
                     </Section>
@@ -409,10 +411,10 @@
 
 
 @code {
-    #nullable disable warnings
+#nullable disable warnings
     string Password;
     string ConfirmPassword;
-  
+
     bool showRemoveThumbnail = false;
 
     IADUser User => DirectoryEntry as IADUser;
@@ -445,7 +447,7 @@
         }
 
     }
-   
+
     async Task Unlock()
     {
         if (await MessageService.Confirm("Are you sure you want to unlock " + User.DisplayName + "?", "Unlock User"))
@@ -486,5 +488,5 @@
         // }
     }
 
-    
+
 }
