--- a/BLAZAMGui/Layouts/MainLayout.razor
+++ b/BLAZAMGui/Layouts/MainLayout.razor
@@ -53,7 +53,7 @@
                 <MudMainContent Class="mud-height-full">
                     @if (SubHeader != null)
                     {
-                        <MudAppBar Color=Color.Primary Style="top:64px;" Elevation="1">
+                        <MudAppBar Color=Color.Primary Class="app-subheader" Elevation="1">
                             @SubHeader?.ChildContent
                         </MudAppBar>
                         topMarginForContent = "margin-top:64px;";
