--- a/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
+++ b/BLAZAMGui/UI/DirectoryEntryViewHeader.razor
@@ -9,9 +9,9 @@
     groupableEntry = DirectoryEntry as IGroupableDirectoryAdapter;
 
 }
-<MudStack Row Class="mud-width-full">
+<MudStack Row=true Class="mud-width-full">
 
-    <MudStack Row=true>
+    <MudStack Spacing="1">
         @if (groupableEntry != null && DirectoryEntry is not IADComputer)
         {
             <MudText Class="align-middle">
@@ -24,9 +24,12 @@
                 @DirectoryEntry.CanonicalName
             </MudText>
         }
+        @if (!DirectoryEntry.OU.IsNullOrEmpty())
+        {
+            <MudText Typo="Typo.caption" Class="align-middle mt">@DirectoryTools.PrettifyOu(DirectoryEntry.OU) </MudText>
 
+        }
 
-        <MudText Typo="Typo.caption" Class="align-middle">@DirectoryTools.PrettifyOu(DirectoryEntry.OU) </MudText>
 
     </MudStack>
 
@@ -49,9 +52,7 @@
                                      ToggledColor="Color.Success" />
                 </MudTooltip>
             }
-            @*<DynamicMudInput Color=Color.Success Label="Account Enabled" @bind-Value=@(User.Enabled) Disabled=@((User.Disabled && !User.CanEnable)||(User.Enabled && !User.CanDisable)) />*@
-            @*<MudSwitch Color=Color.Success Label="Account Enabled" @bind-Checked=@(User.Enabled) Disabled=@((User.Disabled && !User.CanEnable)||(User.Enabled && !User.CanDisable)) />*@
-
+          
 
             @if (DirectoryEntry.CanEdit)
             {
